data/issues_nolabel/nolabel_test_1033.txt
build_pip_package error on Mac+Python3

See detailed build log at: http://ci.tensorflow.org/view/Experimental/job/experimental-cais-tensorflow-mac-python3-copt_pip_install-test/1/consoleFull

In file included from tensorflow/core/kernels/conv_ops.cc:22:
In file included from ./tensorflow/core/framework/numeric_op.h:19:
In file included from ./tensorflow/core/framework/op_kernel.h:22:
In file included from ./tensorflow/core/framework/allocator.h:25:
In file included from ./tensorflow/core/framework/type_traits.h:22:
In file included from ./tensorflow/core/framework/types.h:23:
In file included from third_party/eigen3/unsupported/Eigen/CXX11/Tensor:2:
In file included from external/eigen_archive/eigen-eigen-8cd7c2c6e9e1/unsupported/Eigen/CXX11/Tensor:92:
external/eigen_archive/eigen-eigen-8cd7c2c6e9e1/unsupported/Eigen/CXX11/src/Tensor/TensorContractionBlocking.h:29:31: error: no type named 'Scalar' in 'Eigen::internal::TensorContractionInputMapper<float, long, 0, Eigen::TensorEvaluator<const Eigen::TensorReshapingOp<const Eigen::DSizes<long, 2>, const Eigen::TensorImagePatchOp<-1, -1, const Eigen::TensorMap<Eigen::Tensor<const float, 4, 1, long>, 16> > >, Eigen::ThreadPoolDevice>, Eigen::array<long, 1>, Eigen::array<long, 1>, 4, false, false, 0>'
typedef typename RhsMapper::Scalar RhsScalar;
^

This error doesn't occur if Python2 is used on Mac.